--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3'
 services:
    docker-registry:
       image: registry:2
-      container_name: my-docker-registry
+      container_name: docker-registry
       ports: 
          - 50001:5000
       restart: always
