--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 ---
-version: '3'
+version: "3"
 
 services:
-   docker-registry:
-      image: registry:2
-      container_name: docker-registry
-      ports: 
-         - 50001:5000
-      restart: always
-      volumes:
-         - ./volume:/var/lib/registry
-   docker-registry-ui:
-      image: konradkleine/docker-registry-frontend:v2
-      container_name: docker-registry-ui
-      ports: 
-         - 50002:80
-      environment:
-         ENV_DOCKER_REGISTRY_HOST: docker-registry
-         ENV_DOCKER_REGISTRY_PORT: 50001
+  docker-registry:
+    image: registry:2
+    container_name: docker-registry
+    ports:
+      - 50001:5000
+    restart: always
+    volumes:
+      - ./volume:/var/lib/registry
+  docker-registry-ui:
+    container_name: docker-registry-ui
+    image: konradkleine/docker-registry-frontend:v2
+    ports:
+      - 50002:80
+    environment:
+      ENV_DOCKER_REGISTRY_HOST: docker-registry
+      ENV_DOCKER_REGISTRY_PORT: 50001
